--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                     <button id="btn-im-up-amount" class="bg-gray-200 p-1 rounded w-20">0</button>
                 </div>
                 <div>
-                    <p>อัพเกรด</p>
+                    <p>รีเซ็ตทุกอย่างที่ผ่านมาเพื่ออัพเกรด impressions</p>
                     <button id="btn-im-up-tier" class="bg-gray-200 p-1 rounded w-20">0</button>
                 </div>
                 <div>
